--- a/force-app/main/default/classes/DummyJSONCallout.cls
+++ b/force-app/main/default/classes/DummyJSONCallout.cls
@@ -32,19 +32,39 @@ public with sharing class DummyJSONCallout {
 	 * 
      * @param dummyUserId The ID of the user in the external system to fetch data for.
      */
-
+	@future(callout=true)
 	public static void getDummyJSONUserFromId(String dummyUserId) {
 		// Create HTTP request to send.
-
+		Http http = new Http();
+		HttpRequest request = new HttpRequest();
 		// Set the endpoint URL. Use direct URL or for best practices use Named Credential.
-
+		request.setEndpoint('https://dummyjson.com/user/' + dummyUserId);
 		// Set the HTTP method to GET.
-
+		request.setMethod('GET');
 		// Send the HTTP request and get the response.
+		HttpResponse response = http.send(request);
 
+		System.debug(response.getStatusCode());
+		System.debug(response.getStatus());
+		System.debug(response.getBody());
+		
 		// If the HTTP response code is successful, parse the JSON response and update the contact.
-		Contact cont = null;
-		upsert cont DummyJSON_Id__c; //insert/update from the JSON response using the external id (dummyUserId)
+		if (response.getStatusCode() >= 200 || response.getStatusCode() <= 299){
+			String responseBody = response.getBody();
+			//Parse Json Format
+			Contact cont = createContactFromJson(response.getBody());
+			cont.DummyJSON_Id__c = dummyUserId; 
+			//Print the parsed response to the debug log
+			System.debug('Parsed response' + cont);
+			upsert cont DummyJSON_Id__c; //insert/update from the JSON response using the external id (dummyUserId)
+		} else {
+				// if the status code is not 200-299, then an issue occurred with the request.
+				System.debug('HTTP request failed. Status Code : ' + response.getStatusCode());
+				System.debug('Response body :' + response.getBody());
+			}
+
+	
+		
 	}
 
 	/* 
@@ -64,16 +84,38 @@ public with sharing class DummyJSONCallout {
 	@TestVisible // Allows test class to see this method. Since it is private, it would not be visible otherwise.
 	private static Contact createContactFromJson(String jsonResponse) {
 		// Deserialize the JSON string into map of primitive data types.
-
+		Map<String, Object> jsonMap = (Map<String, Object>) JSON.deserializeUntyped(jsonResponse);
+		System.debug(jsonMap);
+		System.debug('The firstName is :' + jsonMap.get('firstName'));
+		System.debug('The lastName is :' + jsonMap.get('lastName'));
 		// Create a new contact from the JSON response.
-
+		Contact cont = new Contact();
 		// Set the contact fields from the JSON response.
-
+		if( jsonMap.get('firstName') == Null || jsonMap.get('firstName') == ''){
+			cont.FirstName = 'Unknown';
+		} else {
+			cont.FirstName = (String) jsonMap.get('firstName');
+		}
+		if( jsonMap.get('lastName') == Null || jsonMap.get('lastName') == ''){
+			cont.LastName = 'Unknown';
+		} else {
+			cont.LastName = (String) jsonMap.get('firstName');
+		}
+		cont.Email = (String) jsonMap.get('email');
+		cont.Phone = (String) jsonMap.get('phone');
+		cont.Birthdate = Date.valueOf((String) jsonMap.get('birthDate'));
 		// Deserialize the address from the JSON response.
-
+		Map<String, Object> addressMap = (Map<String, Object>) jsonMap.get('address');  
+		System.debug(addressMap);
 		// Set the address fields on the contact.
-
-		return null;
+		cont.MailingStreet = (String) addressMap.get('address');
+		cont.MailingCity = (String) addressMap.get('city');
+		cont.MailingState = (String) addressMap.get('state');
+		cont.MailingPostalCode =  (String) addressMap.get('postalCode');
+		cont.MailingCountry = (String) addressMap.get('country');
+		
+	
+		return cont;
 	}
 
 	/*
@@ -88,19 +130,29 @@ public with sharing class DummyJSONCallout {
      * 
      * @param contactId The Salesforce Contact ID used to generate the JSON payload for the external system.
      */
-	
+	@future(callout=true)
 	public static void postCreateDummyJSONUser(String contactId) {
 		// Create HTTP request to send.
+		HttpRequest request = new HttpRequest();
 
 		// Set the endpoint URL. Use direct URL or for best practices use Named Credential.
-
+		request.setEndpoint('callout:DummyJsonUser' + '/add');
 		// Set the HTTP method to POST.
-
+		request.setMethod('POST');
+		//request.setHeader('Content-Type', 'application/json');  //https://dummyjson.com/users
 		// Set the body using generateDummyJsonUserPayload method.
-
+		request.setBody(generateDummyJsonUserPayload(contactId));
 		// Send the HTTP request and get the response.
-
+		Http http = new Http();
+		HttpResponse response = http.send(request);
 		// If the HTTP response code is successful, update the contact.
+		If( response.getStatusCode() >= 200 || response.getStatusCode() <= 299){
+			Contact cont = new Contact( Id = contactId, DummyJson_Last_Updated__c = DateTime.now());
+			update cont;
+			System.debug('System Successfully created contact in other system');
+			System.debug(cont);
+		}
+
 	}
 
 	/*
@@ -120,13 +172,28 @@ public with sharing class DummyJSONCallout {
 	@TestVisible // Allows test class to see this method. Since it is private, it would not be visible otherwise.
 	private static String generateDummyJsonUserPayload(String contactId) {
 		// Query the contact to get the field values to generate the JSON payload.
-
+		Contact cont = [
+			SELECT Id, FirstName, LastName, Email, Phone, DummyJSON_Id__c
+			FROM Contact
+			WHERE Id = :contactId
+		];
 		// Create a map of the field values.
+		Map<String, Object> jsonMap = new Map<String, Object>();
+		jsonMap.put('firstName', cont.FirstName);
+		jsonMap.put('lastName', cont.LastName);
+		jsonMap.put('email', cont.Email);
+		jsonMap.put('phone', cont.Phone);
+		jsonMap.put('salesforceId', cont.DummyJSON_Id__c);
 
-		// Serialize the map into a JSON string.
 		// Make sure to check that required contacts fields have a value. Default the value to unknown if it does not exists.
+		if(cont.LastName == Null || cont.LastName == ''){
+			jsonMap.put('lastName', 'Unknown');
+		}
+		// Serialize the map into a JSON string.
+		String jsonPayload = JSON.serialize(jsonMap);
+		System.debug('Payload being sent to url : ' + jsonPayload);
 		// Integration data can change over time. It is a best practice to add safeguards/validation to ensure the integration does not break.
 
-		return null;
+		return jsonPayload;
 	}
 }
