--- a/force-app/main/default/classes/DummyJSONCalloutMockGenerator.cls
+++ b/force-app/main/default/classes/DummyJSONCalloutMockGenerator.cls
@@ -28,7 +28,7 @@ public with sharing class DummyJSONCalloutMockGenerator implements HttpCalloutMo
 		} else {
 			// Return the dummy user details for the GET request
 			res.setBody(
-				'{"email": "test@example.com", "phone": "+123456789", "birthDate": "1990-01-01", "address": {"address": "123 Test St", "city": "Test City", "postalCode": "12345", "state": "TS", "country": "Testland"}}'
+				'{"id": "1135225", "firstName": "John", "lastName": "Doe" , "email": "test@example.com", "phone": "+123456789", "birthDate": "1990-01-01", "address": {"address": "123 Test St", "city": "Test City", "postalCode": "12345", "state": "TS", "country": "Testland"}}'
 			);
 		}
 		res.setStatusCode(200);
